Fixed Comments width on mobile
This was previously done before along with YouTube Embeds and other
changes but was lost for some reason.

--- a/wp-content/themes/mag-wp/css/colors/default.css
+++ b/wp-content/themes/mag-wp/css/colors/default.css
@@ -1729,6 +1729,7 @@ div.ts-fab-tab .ts-fab-text .ts-fab-latest li span {
 }
 .single-content .comments {
 	min-height: 270px;
+	width: 100%;
 }
 .single-content .comments h3.title {
 	color: #000 !important;
